--- a/download.html
+++ b/download.html
@@ -2,69 +2,37 @@
 <html>
 	<head>
 		<!-- Primary Meta Tags -->
-		<title>Archcraft : Download</title>
-		<meta name="title" content="Archcraft : Download">
-		<meta name="description" content="Yet another minimal Linux distribution,
-		based on Arch Linux.">
-
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://archcraft.io/download">
-		<meta property="og:title" content="Archcraft : Download">
-		<meta property="og:description" content="Yet another minimal Linux distribution,
-		based on Arch Linux.">
-		<meta property="og:image" content="https://archcraft.io/images/meta.jpg">
-
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://archcraft.io/download">
-		<meta property="twitter:title" content="Archcraft : Download">
-		<meta property="twitter:description" content="Yet another minimal Linux distribution,
-		based on Arch Linux.">
-		<meta property="twitter:image" content="https://archcraft.io/images/meta.jpg">
-
+		<title>Denios Gnu/Linux : Home</title>
+		<meta name="title" content="Denios Gnu/Linux : Home">
+		<meta name="description" content="Denios fully featured distribution.">
 		<!-- Other -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" href="images/fav.svg">
+		<link rel="shortcut icon" href="images/fav.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Archcraft</h1>
-						<p>Yet another minimal Linux distribution,<br />
-						based on <a href="https://www.archlinux.org" target="_blank">Arch Linux</a>.</p>
-					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="download.html" class="active">Download</a></li>
-							<li><a href="flavors.html">Flavors</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="https://wiki.archcraft.io" target="_blank">Wiki</a></li>
-							<li><a href="https://wiki.archcraft.io/news" target="_blank">News</a></li>
-							<li><a href="more.html">More</a></li>
-						</ul>
-					</nav>
-
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="download.html" class="active">Download</a></li>
+						<li><a href="flavors.html">Flavors</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
+						<li><a href="https://wiki.denios.tk" target="_blank">Wiki</a></li>
+						<li><a href="https://wiki.denios.tk/news" target="_blank">News</a></li>
+						<li><a href="more.html">More</a></li>
+					</ul>
+				</nav>
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Download -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Download Archcraft</h2>
-									<div class="col-12"><span class="image fit"><img src="https://raw.githubusercontent.com/archcraft-os/core-packages/main/calamares-config/files/calamares/branding/archcraft/welcome.png" alt="" /></span></div>
-									<p>You can download Archcraft from either <b>Sourceforge</b>, <b>Google Drive</b> or <b>Mega Cloud</b>.</p>
+									<h2>Download Denios Linux</h2>
+									<p>You can download ISO from <b>Sourceforge</b>, or build from source code <b>GitHub</b></p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
@@ -72,11 +40,6 @@
 										<li><a href="https://github.com/archcraft-os/archcraft/blob/master/changelog.md" target="_blank" class="button">Changelog</a></li>
 									</ul>
 								</footer>
-								<div align="left">
-										<blockquote>Latest Release &nbsp;:&nbsp; <code>archcraft-2023.01.01-x86_64.iso</code>
-										<br />The username and password for live session is &nbsp;:&nbsp; <b>liveuser</b>
-										<br />Archcraft is only available for 64-bit architectures. There are no 32-bit, ARM or WSL editions &amp; perhaps, never going to be.</blockquote>
-								</div>
 							</section>
 
 						<!-- Options -->
@@ -89,19 +52,19 @@
 										<span class="icon solid major style1 fa-download"></span>
 										<h3>Sourceforge</h3>
 										<p>Get the latest ISO from sourceforge.</p>
-										<a href="https://sourceforge.net/projects/archcraft/files/latest/download" target="_blank" class="button">Download</a>
+										<a href="https://sourceforge.net/projects/denios-linux/files/iso" target="_blank" class="button">Download</a>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-download"></span>
 										<h3>Google Drive</h3>
 										<p>Download the ISO from google drive.</p>
-										<a href="https://drive.google.com/drive/folders/1iI4OrdZ3gMHKbRzBR6BpN4iFOp595pJw?usp=share_link" target="_blank" class="button">Download</a>
+										<a href="#" target="_blank" class="button">Download</a>
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-download"></span>
-										<h3>Mega</h3>
-										<p>Download the ISO from mega cloud.</p>
-										<a href="https://mega.nz/folder/OyZgUT7Z#XMhkTli3DxhxI0hzyXaQNQ" target="_blank" class="button">Download</a>
+										<h3>GitHub</h3>
+										<p>View source codes GitHub.</p>
+										<a href="https://github.com/deniosm?tab=repositories" target="_blank" class="button">Download</a>
 									</li>
 								</ul>
 							</section>
