--- a/index.html
+++ b/index.html
@@ -5,53 +5,35 @@
 		<title>Denios Gnu/Linux : Home</title>
 		<meta name="title" content="Denios Gnu/Linux : Home">
 		<meta name="description" content="Denios fully featured distribution.">
-
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://denios.tk/">
-		<meta property="og:title" content="Denios Gnu/Linux : Home">
-		<meta property="og:description" content="Denios Linux fully featured distribution.">
-		<meta property="og:image" content="https://denios.tk/images/meta.jpg">
-
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://denios.tk/">
-		<meta property="twitter:title" content="Denios : Home">
-		<meta property="twitter:description" content="Denios Linux fully featured distribution.">
-		<meta property="twitter:image" content="https://denios.tk/images/meta.jpg">
-
 		<!-- Other -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" href="images/fav.svg">
+		<link rel="shortcut icon" href="images/fav.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html" class="active">Home</a></li>
+						<li><a href="download.html">Download</a></li>
+						<li><a href="flavors.html">Flavors</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
+						<li><a href="https://wiki.denios.tk" target="_blank">Wiki</a></li>
+						<li><a href="https://wiki.denios.tk/news" target="_blank">News</a></li>
+						<li><a href="more.html">More</a></li>
+					</ul>
+				</nav>
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="images/logo.png" alt="" /></span>
 						<h1>Welcome</h1>
-						<p>Denios Gnu/Linux is an operating system based on the Linux kernel <br />
-						and the <a href="https://www.gnu.org" target="_blank">GNU project</a>.</p>
+						<p>Denios Gnu/Linux is an free,open source operating system based on the Linux kernel and the and the GNU project.It was created to be useful for various purposes, including daily
+						use, software development, system administration, cyber security testing, network
+						engineering, research, digital forensics...</p>
 					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html" class="active">Home</a></li>
-							<li><a href="download.html">Download</a></li>
-							<li><a href="flavors.html">Flavors</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="https://wiki.denios.tk" target="_blank">Wiki</a></li>
-							<li><a href="https://wiki.denios.tk/news" target="_blank">News</a></li>
-							<li><a href="more.html">More</a></li>
-						</ul>
-					</nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -83,21 +65,28 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-feather"></span>
-										<h3>Minimal</h3>
-										<p>Denios is very minimal and lightweight.
-										It can run under 500Mb of memory as it only uses window managers and some lightweight applications.</p>
+										<h3>I24-Home Edition</h3>
+										<p>This is designed for everyday use, privacy and
+										software development. Security tools can be manually installed for
+										putting together a custom and lightweight pentesting environment.
+										Denios in both versions also supports much privacy, numerous anonymized 
+										and encryption security tools, and can be be run as Live-CD or from a USB Drive and installation mod</p>
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-heart"></span>
-										<h3>Stunning</h3>
-										<p>Flat and pastel colors, the consistency among all the UI elements,
-										And various themes make Denios look very clean, minimal and Stunning.</p>
+										<h3>Chiwan Edition-Security Edition</h3>
+										<p>This OS that naturally preys on others is a security-centric free open-source Linux project for penetration testing and ethical hacking. You can also use it as a private, hardened, secure, and anonymized Linux distro.Denios Chiwan Edition has around 1000 pre-installed tools which are split in several categories. Most kernel and user configs are customized by default to prevent any hacking, non-privileged access and reduce the attack surface. many built-in firewalls and defensive tools allow end-users to control the Denios.</p>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-cog"></span>
-										<h3>Powerful</h3>
-										<p>With latest softwares and built-in support for AUR, and being lightweight,
-										Denios gives you the power to do whatever you want on your Linux PC.</p>
+										<h3>Easy to use</h3>
+										<p>Denios is very simple and easy to use even for beginners.</p>
+										<p>Download the ISO file , burn it on a USB flash memory,CD,sd card etc
+											Start the system.</p>
+										<p>Detailed step-by-step instructions</p>
+										<ul class="actions">
+											<li><a href="documentation.html" class="button">Instructions</a></li>
+										</ul>
 									</li>
 								</ul>
 							</section>
