--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<li><a href="#top">HOME</a></li>
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#service">RELEASE</a></li>
-						<li><a href="#portfolio">GALERY</a></li>
+						<li><a href="#portfolio">PACKAGE LISTS</a></li>
 						<li><a href="#contact">CONTRIBUTE</a></li>
 					</ul>
 				</div>
