--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Denios Linux | 2023</title>
+		<title>D3NIOS GNU/LINUX | 1.0 | 2023</title>
 		<meta name="keywords" content="denios,linux,denios gnu/linux,security os,hacking,education,bosnia">
 		<meta name="description" content="Advanced operating system">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -30,7 +30,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">DeniosLinux</a>
+					<a href="#" class="navbar-brand">D3NIOS LINUX</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -50,10 +50,10 @@
     		<div class="container">
     			<div class="row">
     				<div class="col-md-offset-2 col-md-8">
-    					<h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Denios <span>Linux</span></h1>
+    					<h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">D3NIOS <span>LINUX</span></h1>
     					<div class="element">
-                            <div class="sub-element">Unleashing the full potential of open source, Bosnian style</div>
-                            <div class="sub-element">Denios is a fully featured operating system based on Linux kernel and Gnu project.</div>
+                            <div class="sub-element">Unleashing the full potential of open source with the first Bosnian distribution of Gnu/Linux.</div>
+                            <div class="sub-element">D3nios Gnu/Linux is a fully featured operating system based on Linux kernel and Gnu project.</div>
                         </div>
     					<a data-scroll href="https://sourceforge.net/p/denios-linux/files/iso/" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">Downloads</a>
 						<a data-scroll href="https://denios-linux.readthedocs.io/en/latest/" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">Quick Start</a>
@@ -61,7 +61,7 @@
     				</div>
     			</div>
 				<div class="col-md-12">
-					<h5 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">ALL THE INFORMATION FOR DOWNLOAD INSTRUCTIONS,INSTALLATIONS,DOCUMENTATION AND OTHERS CAN BE FOUND IN THE <a href="https://denios-linux.readthedocs.io/en/latest/ ">DOCUMENTATION</a>  SECTION
+					<h5 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">ALL THE INFORMATION FOR DOWNLOAD INSTRUCTIONS,INSTALLATIONS,DOCUMENTATION AND OTHERS CAN BE FOUND IN THE <b><a href="https://denios-linux.readthedocs.io/en/latest/ ">DOCUMENTATION</a></b>  SECTION
 					</h5>
     		</div>
     	</section>
