--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 					<div class="col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
 						<h2 class="text-uppercase">Edition Home/Edu</h2>
 						<p>This is designed for everyday use, privacy and software development. Security tools can be manually installed for putting together a custom and lightweight pentesting environment. Denios in both versions also supports much privacy, numerous anonymized and encryption security tools, and can be be run as Live-CD or from a USB Drive and installation mod.Both versions are free of tracking and telemetry "features" and provide many privacy tools such as AnonSurf, Tor Browser, custom Firefox profile, simple cryptographic tools and more. </p>
-						<p><span><i class="fa fa-mobile"></i></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<p><i class="fa fa-code"></i>Quis autem velis reprehenderit et quis voluptate velit esse quam.</p>
+						<p><span><i class="fa fa-mobile"></i></span>**</p>
+						<p><i class="fa fa-code"></i>*</p>
 					</div>
 					<div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
 						<img src="images/Untitled-1.png" class="img-responsive" alt="feature img">
@@ -113,8 +113,8 @@
 					<div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<h2 class="text-uppercase">Edition Security</h2>
 						<p>This OS that naturally preys on others is a security-centric free open-source Linux project for penetration testing and ethical hacking. You can also use it as a private, hardened, secure, and anonymized Linux distro.Denios Security Edition has around 1000 pre-installed tools which are split in several categories. Most kernel and user configs are customized by default to prevent any hacking, non-privileged access and reduce the attack surface. many built-in firewalls and defensive tools allow end-users to control the Denios.</p>
-						<p><span><i class="fa fa-mobile"></i></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<p><i class="fa fa-code"></i>Quis autem velis reprehenderit et quis voluptate velit esse quam.</p>
+						<p><span><i class="fa fa-mobile"></i></span>*****</p>
+						<p><i class="fa fa-code"></i>*******</p>
 					</div>
 				</div>
 			</div>
@@ -132,14 +132,14 @@
 						<div class="pricing text-uppercase">
 							<div class="pricing-title">
 								<h4>Home/Edu</h4>
-								<p>$11</p>
+								<p>*</p>
 								<small class="text-lowercase">monthly</small>
 							</div>
 							<ul>
-								<li>6 GB Space</li>
-								<li>600 GB Bandwidth</li>
-								<li>60 More Themes</li>
-								<li>Lifetime Support</li>
+								<li>*</li>
+								<li>*</li>
+								<li>*</li>
+								<li>*</li>
 							</ul>
 							<button class="btn btn-primary text-uppercase">Sign up</button>
 						</div>
@@ -148,14 +148,14 @@
 						<div class="pricing active text-uppercase">
 							<div class="pricing-title">
 								<h4>Security</h4>
-								<p>$22</p>
+								<p>*</p>
 								<small class="text-lowercase">monthly</small>
 							</div>
 							<ul>
-								<li>15 GB space</li>
-								<li>1,500 GB Bandwidth</li>
-								<li>150 More Themes</li>
-								<li>Lifetime Support</li>
+								<li>*</li>
+								<li>*</li>
+								<li>*</li>
+								<li>*</li>
 							</ul>
 							<button class="btn btn-primary text-uppercase">Sign up</button>
 						</div>
@@ -168,10 +168,10 @@
 								<small class="text-lowercase">monthly</small>
 							</div>
 							<ul>
-								<li>35 GB space</li>
-								<li>3,500 GB bandwidth</li>
-								<li>350 more themes</li>
-								<li>Lifetime Support</li>
+								<li>*</li>
+								<li>*</li>
+								<li>*</li>
+								<li>*</li>
 							</ul>
 							<button class="btn btn-primary text-uppercase">Sign Up</button>
 						</div>
