--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<div class="pricing-title">
 								<h4>Home/Edu</h4>
 								<p>*</p>
-								<small class="text-lowercase">monthly</small>
+								<small class="text-lowercase">****</small>
 							</div>
 							<ul>
 								<li>*</li>
@@ -141,7 +141,7 @@
 								<li>*</li>
 								<li>*</li>
 							</ul>
-							<button class="btn btn-primary text-uppercase">Sign up</button>
+							<button class="btn btn-primary text-uppercase">****</button>
 						</div>
 					</div>
 					<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
@@ -149,7 +149,7 @@
 							<div class="pricing-title">
 								<h4>Security</h4>
 								<p>*</p>
-								<small class="text-lowercase">monthly</small>
+								<small class="text-lowercase">***</small>
 							</div>
 							<ul>
 								<li>*</li>
@@ -165,7 +165,7 @@
 							<div class="pricing-title">
 								<h4>D3nios meta packages</h4>
 								<p>$33</p>
-								<small class="text-lowercase">monthly</small>
+								<small class="text-lowercase">****</small>
 							</div>
 							<ul>
 								<li>*</li>
@@ -173,7 +173,7 @@
 								<li>*</li>
 								<li>*</li>
 							</ul>
-							<button class="btn btn-primary text-uppercase">Sign Up</button>
+							<button class="btn btn-primary text-uppercase">*****</button>
 						</div>
 					</div>
 				</div>
