--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+	<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>D3NIOS GNU/LINUX - 2023 </title>
+		<title>D3NIOS GNU/LINUX | BiH 2023 </title>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="denios,denios gnu/linux,denios debian,bosnian linux,d3nios,d3nios gnu/linux,d3nios bosnia,d3nios bosnia linux gnu">
-		<meta name="description" content="D3NIOS GNU/LINUX | First Bosnian OS">
+		<meta name="keywords" content="">
+		<meta name="description" content="">
+
 		<!-- animate css -->
 		<link rel="stylesheet" href="css/animate.min.css">
 		<!-- bootstrap css -->
@@ -14,14 +17,17 @@
 		<!-- font-awesome -->
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<!-- google font -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,800' rel='stylesheet' type='text/css'>
-				<!-- custom css -->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,800' rel='stylesheet' type='text/css'> 
+		<!-- custom css -->
 		<link rel="stylesheet" href="css/templatemo-style.css">
 
 	</head>
 	<body>
+		<!-- end preloader -->
 		<!-- start navigation -->
 		<nav class="navbar navbar-default navbar-fixed-top templatemo-nav" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
@@ -31,16 +37,18 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right text-uppercase">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#feature">Release</a></li>
-						<li><a href="#pricing">Documentation</a></li>
-						<li><a href="#pricing">Guide</a></li>
-						<li><a href="#download">Contribute</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a rel="nofollow" href="https://github.com/deniosm/documentation" target="_parent">Bosanski</a></li>
+						<li><a href="#feature">O izdanju</a></li>
+						<li><a href="#pricing">Dokumentacija</a></li>
+						<li><a href="#pricing">Vodič</a></li>
+						<li><a href="#download">Preuzimanja</a></li>
+						<li><a href="#contact">Prikljucite se</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+	<body>
+		
 		<!-- end navigation -->
 		<!-- start home -->
 		<section id="home">
