--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right text-uppercase">
-						<li><a rel="nofollow" href="https://github.com/deniosm/documentation" target="_parent">Bosanski</a></li>
+						<li><a rel="nofollow" href="https://www.github.com/deniosm/documentation/" target="_parent">Bosanski</a></li>
 						<li><a href="#feature">O izdanju</a></li>
 						<li><a href="#pricing">Dokumentacija</a></li>
 						<li><a href="#pricing">Vodič</a></li>
