--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right text-uppercase">
-						<li><a rel="nofollow" href="https://www.deniosm.github.io/bs/" target="_parent">Bosnian</a></li>
+						<li><a rel="nofollow" href="https://deniosm.github.io/bs/" target="_parent">Bosnian</a></li>
 						<li><a href="#feature">Release</a></li>
 						<li><a href="#pricing">Documentation</a></li>
 						<li><a href="#pricing">User guide</a></li>
@@ -54,7 +54,7 @@
 						<div class="col-md-1"></div>
 						<div class="col-md-10 wow fadeIn" data-wow-delay="0.3s">
 							<h1 class="text-upper">D3NIOS  GNU/LINUX</h1>
-							<p class="tm-white">Denios is a fully responsive, clean design, modern and secure multipurpose operating system. It is the first fully open-source Bosnian operating system based on the <a rel="nofollow" href="https://kernel.org/" target="_parent"><b> Linux kernel</b></a>  and the <a rel="nofollow" href="https://gnu.org" target="_parent"><b> GNU project</b></a>. This is the first release of the first edition. For more information go to <a rel="nofollow" href="https://github.com/deniosm/" target="_parent"><b>Releases</b></a> or <a rel="nofollow" href="https://sourceforge.net/projects/denios-linux/files/" target="_blank"> <b>Documentation.</b></a></p>
+							<p class="tm-white">Denios is a free operating system, clean design, modern and secure multipurpose operating system. It is the first fully open source Bosnian operating system based on <a rel="nofollow" href="https://kernel.org/" target="_parent"><b> Linux kernel</b></a>  and the <a rel="nofollow" href="https://gnu.org" target="_parent"><b> GNU project</b></a>. This is the first release. For more information go to <a rel="nofollow" href="https://github.com/deniosm/" target="_parent"><b>Releases</b></a> or <a rel="nofollow" href="https://sourceforge.net/projects/denios-linux/files/" target="_blank"> <b>Documentation.</b></a></p>
 							<img src="images/software-img.png" class="img-responsive" alt="home img">
 						</div>
 						<div class="col-md-1"></div>
