--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<a class="nav-link" href="https://deniosm.github.io/contribute/" class="tickets_btn">CONTRIBUTE</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="https://deniosm.github.io/documentation/">DOCUMENTATION</a>
+								<a class="nav-link" href="https://deniosm.github.io/bs/bs/index.html">DOCUMENTATION</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link"
