--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
 	<!--================Header Menu Area =================-->
 
 	<!--================Home Banner Area =================-->
+	<footer class="footer_area p_120">
+		<div class="container">
+			<div class="row footer_inner">
+				<div class="col-lg-5 col-sm-6">
+					<aside class="f_widget ab_widget">
+						<div class="f_title">
+							<h4>Za pomoć Turskoj i Siriji iz BiH !!! 06.02.2023</h4>
+							<h4>For help to Turkey and Syria from BiH !!! 06.02.2023</h4>
+						</div>
+						<p>Sredstva se mogu uplatiti na žiro-račun društva Crvenog krsta BiH broj 1340011130004680, naziv banke: ASA Banka DD Sarajevo, adresa banke: Fra Anđela Zvizdovića 1/A, 71000 Sarajevo, BiH.</p>
+						<p>Funds can be paid into the giro account of the Red Cross BiH society number 1340011130004680, bank name: ASA Banka DD Sarajevo, bank address: Fra Anđela Zvizdovića 1/A, 71000 Sarajevo, BiH.</p>
+						<div class="f_title">
+							<h4>To continue to the website, please scroll down.</h4>
+						</div>
+					</aside>
+				</div>
+			</div>
+		</div>
+	</footer>				
 	<section class="home_banner_area">
 		<div class="banner_inner">
 			<div class="container">
