--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<a class="nav-link" href="https://deniosm.github.io/contribute/" class="tickets_btn">CONTRIBUTE</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="https://deniosm.github.io/bs/bs/index.html">DOCUMENTATION</a>
+								<a class="nav-link" href="https://deniosm.github.io/documentation/">DOCUMENTATION</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link"
@@ -73,7 +73,9 @@
 							<h4>For help to Turkey and Syria from BiH !!! 06.02.2023</h4>
 						</div>
 						<p>Sredstva se mogu uplatiti na žiro-račun društva Crvenog krsta BiH broj 1340011130004680, naziv banke: ASA Banka DD Sarajevo, adresa banke: Fra Anđela Zvizdovića 1/A, 71000 Sarajevo, BiH.</p>
+						<p>Poziv na humanitarni broj: 17023</p>
 						<p>Funds can be paid into the giro account of the Red Cross BiH society number 1340011130004680, bank name: ASA Banka DD Sarajevo, bank address: Fra Anđela Zvizdovića 1/A, 71000 Sarajevo, BiH.</p>
+						<p>Call the humanitarian number: 17023</p>
 						<div class="f_title">
 							<h4>To continue to the website, please scroll down.</h4>
 						</div>
