--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Denios-OS ">
     <meta name="author" content="denios-linux">
     <title>D3NIOS OS GNU/LINUX | The first Bosnian open source operating system</title>
-    <link rel="favicon" href="assets/images/favicon.png">
+    <link rel="favicon" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/images/favicon.png">
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/font-awesome.min.css">
     <!-- Custom styles for our template -->
-    <link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="assets/css/da-slider.css" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/bootstrap-theme.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/da-slider.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/style.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
