--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Denios-OS ">
     <meta name="author" content="denios-linux">
     <title>D3NIOS OS GNU/LINUX | The first Bosnian open source operating system</title>
-    <link rel="favicon" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/images/favicon.png">
+    <link rel="favicon" href="assets/images/favicon.png">
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- Custom styles for our template -->
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/bootstrap-theme.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/da-slider.css" />
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="assets/css/da-slider.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -38,12 +38,14 @@
                     <li><a href="contact.html">Software</a></li>
                     <li><a href="contact.html">Documentation</a></li>
                     <li><a href="https://deniosm.github.io/bs/">BiH/Hr/Sr</a></li>
+
                 </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
     </div>
     <!-- /.navbar -->
+
     <!-- Header -->
     <header id="head">
         <div class="container">
@@ -81,7 +83,9 @@
     <!-- Highlights - jumbotron -->
     <div class="jumbotron">
         <div class="container">
+
             <h2 class="text-center">Downloads</h2>
+
             <div class="row">
                 <div class="col-md-3 col-sm-6 highlight">
                     <div class="hbox">
@@ -133,6 +137,7 @@
                 </div>
             </div>
             <!-- /row  -->
+
         </div>
     </div>
     <!-- container -->
@@ -168,9 +173,11 @@
                 <!-- /row of panels -->
             </div>
         </div>
+
         <div class="footer2">
             <div class="container">
                 <div class="row">
+
                     <div class="col-md-6 panel">
                         <div class="panel-body">
                             <p class="simplenav">
@@ -193,12 +200,18 @@
                 <!-- /row of panels -->
             </div>
         </div>
+
     </footer>
+
+
+
+
+
     <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-    <script src="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/js/modernizr-latest.js"></script>
+    <script src="assets/js/modernizr-latest.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/js/jquery.cslider.js"></script>
-    <script src="https://raw.githubusercontent.com/deniosm/deniosm.github.io/master/assets/js/custom.js"></script>
+    <script src="assets/js/jquery.cslider.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
 </html>
