--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav pull-right">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="https://deniosm.github.io/release/">Release</a></li>
+                    <li><a href="https://deniosm.github.io/Release.html">Release</a></li>
                     <li><a href="https://deniosm.github.io/contribute/">Contribute</a></li>
                     <li><a href="contact.html">Software</a></li>
                     <li><a href="contact.html">Documentation</a></li>
