--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
     </footer>
     <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
     <script src="assets/js/modernizr-latest.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery.cslider.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/respond.min.js"></script>
