--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                     </div>
                     <div class="da-slide">
                         <h2>Multiple versions</h2>
-                        <p>You can use Denios Gnu/Linux as a daily home OS, for software development, for security and penetration testing.</p>
+                        <p>You can use Denios Gnu/Linux as a daily home OS, software development,security and penetration testing...</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
                         <h2>Easy to use</h2>
-                        <p>Download the iso image of the release you want,burn to usb/cd/dvd ,and start the system.More detailed instructions on how to do it are<a href="https://gnu.org"><b> HERE</b></a></p>
+                        <p>Download the iso image of the release you want,burn to usb/cd/dvd ,and start the system...</p>
                         <div class="da-img"></div>
                     </div>
                     <nav class="da-arrows">
@@ -84,7 +84,7 @@
     <div class="jumbotron">
         <div class="container">
 
-            <h2 class="text-center">Downloads</h2>
+            <h2 class="text-center">Go to downloads:</h2>
 
             <div class="row">
                 <div class="col-md-3 col-sm-6 highlight">
@@ -153,7 +153,9 @@
             </div>
             <div class="col-md-8">
                 <p>The first open source Bosnian operating system  based on<a href="https://kernel.org"><b> Linux kernel</b></a>  and the <a href="https://gnu.org"><b> GNU project.</b></a></p>
-                <p>Free,open source,solid and secure operating system,with a focus on protecting the user's privacy. You can use Denios Gnu/Linux as a daily home OS, for software development, for security and penetration testing.</p>
+                <p>Denios Gnu/Linux offers you the experience of using the OS in a more secure and private way. The system is built entirely from its own, independently developed source forked from the Debian test/unstable branch, with carefully selected features and optimizations to improve system and user stability and security, while offering full customization and a growing collection of packages not found in official debian repositories.</p>
+                <p>All included software is free and open source, compatible with DFSG and GNU guidelines</p>
+                <p>Some features:</p>
                 <p>The OS in all versions comes with several powerful tools for protecting user privacy, encryption, tools for network anonymization...</p>
                 <p>The Home version is for everyday use, and in addition to the tools and applications needed for normal use, it only has privacy tools.</p>
                 <p>The EDU version is the version intended for development and education. I am currently still working on this version.</p>
