--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="https://deniosm.github.io/Release.html">Release</a></li>
                     <li><a href="https://deniosm.github.io/contribute/">Contribute</a></li>
                     <li><a href="contact.html">Software</a></li>
-                    <li><a href="contact.html">Documentation</a></li>
+                    <li><a href="manual.html">Documentation</a></li>
                     <li><a href="https://deniosm.github.io/bs/">BiH/Hr/Sr</a></li>
 
                 </ul>
