--- a/2/2.4/qemu-libvirt.html
+++ b/2/2.4/qemu-libvirt.html
@@ -5,17 +5,17 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chapter 2.1.4 QEMU/LibVirt &mdash; Denios Gnu/Linux Manual 1.0 documentation</title>
-      <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-      <link rel="stylesheet" href="../../_static/css/theme.css" type="text/css" />
-    <link rel="shortcut icon" href="../../_static/favicon.ico"/>
+      <link rel="stylesheet" href="../../assets/pygments.css" type="text/css" />
+      <link rel="stylesheet" href="../../assets/css/theme.css" type="text/css" />
+    <link rel="shortcut icon" href="../../assets/favicon.ico"/>
   
-        <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-        <script src="../../_static/jquery.js"></script>
-        <script src="../../_static/underscore.js"></script>
-        <script src="../../_static/_sphinx_javascript_frameworks_compat.js"></script>
-        <script src="../../_static/doctools.js"></script>
-        <script src="../../_static/sphinx_highlight.js"></script>
-    <script src="../../_static/js/theme.js"></script>
+        <script data-url_root="../../" id="documentation_options" src="../../assets/documentation_options.js"></script>
+        <script src="../../assets/jquery.js"></script>
+        <script src="../../assets/underscore.js"></script>
+        <script src="../../assets/_sphinx_javascript_frameworks_compat.js"></script>
+        <script src="../../assets/doctools.js"></script>
+        <script src="../../assets/sphinx_highlight.js"></script>
+    <script src="../../assets/js/theme.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Chapter 3 Anonsurf" href="../../3/Anonsurf.html" />
@@ -28,7 +28,7 @@
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
             <a href="../../index.html" class="icon icon-home"> Denios Gnu/Linux Manual
-            <img src="../../_static/manual64.png" class="logo" alt="Logo"/>
+            <img src="../../assets/manual64.png" class="logo" alt="Logo"/>
           </a>
               <div class="version">
                 1.0
