Update image links

--- a/2/2.4/qemu-libvirt.html
+++ b/2/2.4/qemu-libvirt.html
@@ -88,17 +88,17 @@ To get a Debian based system prepared for this, we can simply run the following 
 <p>. This will pull in all of the necessary packages and will allow us to create our VM just fine.
 After virt-manager is installed, we can launch it and put in our password as we need elevated permissions for some tasks.
 From here we can select the “+” and begin to create our VM:</p>
-<img alt="../../_images/libvirt-1.png" src="../../_images/libvirt-1.png" />
+<img alt="../../assets/images/libvirt-1.png" src="../../assets/images/libvirt-1.png" />
 <p>We want to ensure we select local ISO file:</p>
-<img alt="../../_images/libvirt-2.png" src="../../_images/libvirt-2.png" />
+<img alt="../../assets/images/libvirt-2.png" src="../../assets/images/libvirt-2.png" />
 <p>We choose our ISO and also de-select guessing the OS and input “Debian 11”:</p>
-<img alt="../../_images/libvirt-3.png" src="../../_images/libvirt-3.png" />
+<img alt="../../assets/images/libvirt-3.png" src="../../assets/images/libvirt-3.png" />
 <p>We make sure to use 2GB of memory and 2 CPU cores:</p>
-<img alt="../../_images/libvirt-4.png" src="../../_images/libvirt-4.png" />
+<img alt="../../assets/images/libvirt-4.png" src="../../assets/images/libvirt-4.png" />
 <p>We set our system to be 20GB:</p>
-<img alt="../../_images/libvirt-5.png" src="../../_images/libvirt-5.png" />
+<img alt="../../assets/images/libvirt-5.png" src="../../assets/images/libvirt-5.png" />
 <p>We can now finalize setup by changing the system name to “denios-linux”:</p>
-<img alt="../../_images/libvirt-6.png" src="../../_images/libvirt-6.png" />
+<img alt="../../assets/images/libvirt-6.png" src="../../assets/images/libvirt-6.png" />
 <p>From here we can follow the normal Denios Linux installation.</p>
 </section>
 
